crates/bsql/tests/compile_fail/type_mismatch_str_for_int.rs
// &str cannot be used for int4 column
fn main() {
    let name = "alice";
    let _ = bsql::query!(
        "SELECT id FROM users WHERE id = $name: &str"
    );
}
